Update quick manual

--- a/front/www/html/log.html
+++ b/front/www/html/log.html
@@ -35,7 +35,7 @@
   </div>
 
   <div id="filebrowser">
-    <h2>File browser</h2>
+    <h2>Files</h2>
     <p>SD card status: <span name="SD_CARD_STATUS">-</span></p>
     <p>SD card free space: <span name="SD_CARD_FREE_SPACE">-</span></p>
     <p>
